--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         	<div class="llcy-banner">
 				<div id="llcy-banner" class="flexslider">
 					<ul class="slides">
-						<li><div class="img"><img src="img/1.jpg" height="410" width="1000" alt="图1" /></div></li>
+						<li><div class="img"><a href="###"><img src="img/1.jpg" height="410" width="1000" alt="图1" /></a></div></li>
 						<li><div class="img"><img src="img/2.jpg" height="410" width="1000" alt="图2" /></div></li>
 						<li><div class="img"><img src="img/3.jpg" height="410" width="1000" alt="图3" /></div></li>
 						<li><div class="img"><img src="img/4.jpg" height="410" width="1000" alt="图4" /></div></li>
@@ -600,22 +600,12 @@
             			<a href="###" class="hzhb-more">More</a>
             	</div>
             	<div class="hzhb-content">
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
-            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="110" height="35"/></a>
+            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="160" height="80"/></a>
+            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="160" height="80"/></a>
+            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="160" height="80"/></a>
+            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="160" height="80"/></a>
+            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="160" height="80"/></a>
+            		<a href="###" class="hzhb-list"><img src="img/1.jpg" width="160" height="80"/></a>
             	</div>
             </div>
             <!--友链-->
